Fixed Mobile Issues
On my phone the logo was small and the form text was too large.

--- a/styles.scss
+++ b/styles.scss
@@ -13,8 +13,8 @@ header {
     h1 {
         border: solid #d0181f 5px;
         border-radius: 50%;
-        width: 180px;
-        height: 180px;
+        width: 200px;
+        height: 200px;
         display: grid;
         place-items: center;
         color: #10428b;
@@ -29,7 +29,7 @@ header {
 #word-form {
     text-align: center;
     input[type=text] {
-        font-size: 1.7em;
+        font-size: 1.5em;
         border: solid #10428b;
     }
     input[type=submit] {
